[tool.poetry]
name = "test automation"
version = "0.1.0"
description = "Repo to try out testing scripts"
authors = ["Ramachandran Kulothungan <ramachandran.kulo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
